feat(NavRegion): Added links to the navigation

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li>Our Company History</li>
-        <li>Contact</li>
-        <li>Feedback</li>
+        <li><a href="">Our Company History</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Feedback</a></li>
     </ul>
 </nav>
